# philips-isyntax-rs

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  data.js
.github/workflows/: audit.yml  benchmark.yml  clippy.yml  coverage.yml  publish.yml  workflow.yml
benches/: bench_read.rs
cpp/: dataenvelopes.cc  dataenvelopes.hpp  facade.cc  facade.hpp  philipsslide.cc  philipsslide.hpp  pixelengine.cc  pixelengine.hpp  region.cc  region.hpp  subimage.cc  subimage.hpp  view.cc  view.hpp  wrapper.cc  wrapper.hpp
src/: bindings.rs  dataenvelopes.rs  errors.rs  facade.rs  lib.rs  philips_slide.rs  pixel_engine.rs  pixelengine.rs  region.rs  sub_image.rs  subimage.rs  utils.rs  view.rs
tests/: fixture.rs  test_facade.rs  test_pixel_engine.rs  test_read_image.rs  test_read_thumbnail.rs  test_subimage.rs  test_view.rs
