[package]
name = "philips-isyntax-rs"
edition = "2021"
version = "1.2.0"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings to the Philips Open Pathology C++ library"
repository = "https://github.com/AzHicham/philips-isyntax-rs"
homepage = "https://github.com/AzHicham/philips-isyntax-rs"
readme = "README.md"
keywords = ["philips", "isyntax", "histopathology", "microscopy"]
categories = ["science", "external-ffi-bindings"]
license = "MIT/Apache-2.0"

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
thiserror = "1.0"
cxx = "1.0"
rand = "0.8.5"
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
rstest = "0.19"
bencher = "0.1"

[[bench]]
name = "bench_read"
harness = false
