[package]
name = "philips-isyntax-rs"
edition = "2021"
version = "1.3.0"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings to the Philips Open Pathology C++ library"
repository = "https://github.com/AzHicham/philips-isyntax-rs"
homepage = "https://github.com/AzHicham/philips-isyntax-rs"
readme = "README.md"
keywords = ["philips", "isyntax", "histopathology", "microscopy"]
categories = ["science", "external-ffi-bindings"]
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"

[features]
default = ["image"]
image = ["dep:image", "dep:fast_image_resize"]

[dependencies]
thiserror = "2"
cxx = "1"
rand = "0.8"
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg"] }
fast_image_resize = { version = "5", optional = true }

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
rstest = "0.23"
bencher = "0.1"

[[bench]]
name = "bench_read"
harness = false
